Fixed text inputs on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,4 +138,5 @@ input[type=text] {
 
 .input-group input[type=text] {
     flex: 1;
+    min-width: 0;
 }
